fixing waybar arch icon

--- a/home/tocopy/.config/waybar/style.css
+++ b/home/tocopy/.config/waybar/style.css
@@ -145,7 +145,7 @@ tooltip {
 
 
 #custom-power {
-  background-image: url('/home/hc/.config/waybar/NixOS.png');
+  background-image: url('Arch.png');
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
